--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "prisma:generate": "prisma generate",
-    "build": "npm run prisma:generate && tsc",
-    "dev": "nodemon",
-    "start": "node dist/index.js"
+    "build": "tsc",
+    "dev": "nodemon ./index.ts",
+    "start": "node dist/index.js",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
